predictors: import tensorflow

--- a/outputs/1.0/wan50/hs_16x16/ctxp_1/R_IOB/batch/lr_5.00e-03/2018-09-28 155042/best-valid-eval.props
+++ b/outputs/1.0/wan50/hs_16x16/ctxp_1/R_IOB/batch/lr_5.00e-03/2018-09-28 155042/best-valid-eval.props
@@ -1,5 +1,5 @@
--	(AM-LOC*
--	*AM-LOC)
+-	(AM-TMP*
+-	*AM-TMP)
 -	(A1*A1)
 -	(A0*
 -	*
@@ -11,22 +11,22 @@ desconhecer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*AM-LOC)
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 
 -	*
@@ -69,19 +69,19 @@ sonhar	(V*V)
 -	*
 -	*A1)
 -	*
--	(AM-LOC*
--	*
--	*AM-LOC)
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	*AM-TMP)
+-	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 
 -	*
@@ -166,7 +166,7 @@ trazer	(V*V)
 -	*
 -	*
 -	*
--	*
+-	(AM-TMP*AM-TMP)
 -	*
 -	*
 -	*
@@ -229,15 +229,15 @@ suspeitar	(V*V)
 -	(A1*
 -	*A1)
 -	*
-morrer	(A1*
--	*A1)
+morrer	(V*V)
+-	(A1*A1)
 -	*
 
 -	(A1*A1)
 -	*
 ficar	(V*V)
--	(V*V)
 -	(A2*
+-	*
 -	*
 -	*
 -	*
@@ -374,7 +374,7 @@ garantir	(V*V)
 -	*A1)
 -	*
 produzir	(V*V)
--	(A2*
+-	(A0*
 -	*
 -	*
 -	*
@@ -388,7 +388,7 @@ produzir	(V*V)
 -	*
 -	*
 -	*
--	*A2)
+-	*A0)
 -	*
 
 -	*
@@ -465,10 +465,10 @@ evitar	(V*V)
 -	*
 -	*
 
--	(AM-LOC*
 -	*
 -	*
--	*AM-LOC)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -509,14 +509,14 @@ reajustar	(V*V)
 -	*
 -	*
 -	*A1)
--	(AM-TMP*
+-	(A3*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*A3)
 -	*
 
 -	(A1*
@@ -537,7 +537,8 @@ dizer	(V*V)
 
 -	*
 beneficiar	(V*V)
--	(AM-CAU*
+-	(A2*A2)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -551,8 +552,7 @@ beneficiar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*AM-CAU)
+-	*AM-TMP)
 -	*
 
 -	*
@@ -595,8 +595,8 @@ receber	(V*V)
 -	*A1)
 -	*
 
--	(A0*
 -	*
+-	(A0*
 -	*
 -	*
 -	*A0)
@@ -717,8 +717,8 @@ pensar	(V*V)
 -	*
 -	*
 -	*
--	*
 -	*A1)
+-	*
 -	*
 
 -	*
@@ -826,9 +826,9 @@ fazer	(V*V)
 
 -	*
 -	*
--	(A1*A1)
+-	(A0*A0)
 atacar	(V*V)
--	*
+-	(A1*A1)
 -	(AM-TMP*
 -	*
 -	*
@@ -861,31 +861,31 @@ atacar	(V*V)
 -	*
 -	*
 -	(A0*A0)
+-	(AM-TMP*AM-TMP)
 -	(AM-NEG*AM-NEG)
--	*
 ter	(V*V)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -901,9 +901,9 @@ ter	(V*V)
 -	(A1*A1)
 -	*
 ficar	(V*V)
--	(V*
--	*V)
 -	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1049,18 +1049,18 @@ levantar	(V*V)
 -	*A0)
 -	*
 
--	(AM-CAU*
+-	(AM-PNC*
 -	*
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*AM-PNC)
 -	*
 -	*
 confirmar	(V*V)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
--	*AM-LOC)
+-	*AM-TMP)
 -	*
 
 -	(A0*
@@ -1096,8 +1096,8 @@ acusar	(V*V)
 -	*
 -	*A0)
 comparecer	(V*V)
+-	(AM-TMP*AM-TMP)
 -	(AM-TMP*
--	*
 -	*
 -	*
 -	*
@@ -1186,9 +1186,9 @@ anunciar	(V*V)
 -	*
 -	*
 -	*
+-	*A1)
 -	*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -1198,18 +1198,18 @@ anunciar	(V*V)
 -	(A1*
 -	*A1)
 ficar	(V*V)
--	(A3*
--	*
--	*
--	*
--	*
--	*A3)
+-	(A2*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*A2)
 -	*
 
 -	(A1*
@@ -1244,8 +1244,8 @@ dar	(V*V)
 -	*
 -	*
 -	*
-atender	(A1*
--	*A1)
+atender	(V*V)
+-	(A1*A1)
 -	*
 
 -	(A1*
@@ -1288,8 +1288,8 @@ faltar	(V*V)
 -	*
 -	*A1)
 
--	(A0*
--	*A0)
+-	*
+-	*
 -	*
 -	*
 viver	(V*V)
@@ -1317,7 +1317,7 @@ viver	(V*V)
 -	*AM-TMP)
 -	*
 
--	(A0*
+-	(A1*
 -	*
 -	*
 -	*
@@ -1338,7 +1338,7 @@ viver	(V*V)
 -	*
 -	*
 -	*
--	*A0)
+-	*A1)
 dizer	(V*V)
 -	*
 -	(A1*
@@ -1358,6 +1358,7 @@ dizer	(V*V)
 -	*
 -	*
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1372,21 +1373,20 @@ dizer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-TMP)
 -	*
 -	*
 -	*
 -	*
 -	*
 faltar	(V*V)
--	(A1*
+-	(A1*A1)
 -	*
 -	*
 -	*
 -	*
 -	*
--	*A1)
+-	*
 -	*
 
 -	(A0*A0)
@@ -1499,9 +1499,9 @@ começar	(V*V)
 -	*AM-LOC)
 -	*
 -	(AM-TMP*
+-	*AM-TMP)
 -	*
--	*
--	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1515,7 +1515,7 @@ começar	(V*V)
 -	(AM-TMP*
 -	*AM-TMP)
 -	*
--	(AM-ADV*AM-ADV)
+-	(AM-TMP*AM-TMP)
 ganhar	(V*V)
 -	(A1*
 -	*
@@ -1556,10 +1556,10 @@ disputar	(V*V)
 -	(A1*
 -	*A1)
 -	*
+-	(AM-TMP*
 -	*
 -	*
--	*
--	*
+-	*AM-TMP)
 -	*
 
 -	*
@@ -1582,9 +1582,9 @@ disputar	(V*V)
 -	*
 -	*
 terminar	(V*V)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
--	*AM-LOC)
+-	*AM-TMP)
 -	*
 
 -	(A0*A0)
@@ -1614,8 +1614,8 @@ autuar	(V*V)
 -	*AM-LOC)
 -	*
 
--	(A0*A0)
--	(AM-NEG*AM-NEG)
+-	(A0*
+-	*A0)
 apresentar	(V*V)
 -	(A1*
 -	*
@@ -1642,11 +1642,11 @@ descumprir	(V*V)
 -	*
 -	*
 
+-	*
+-	*
+-	*
+-	*
 -	(A1*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*A1)
@@ -1674,18 +1674,18 @@ aplicar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*AM-TMP)
 -	*
 
 -	(A0*A0)
 produzir	(V*V)
--	(A1*A1)
+-	(V*V)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
@@ -1822,12 +1822,12 @@ perder	(V*V)
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
--	*A0)
+-	*
+-	*
 -	*
 -	*
 fazer	(V*V)
@@ -1880,9 +1880,9 @@ cumprir	(V*V)
 -	*
 -	*
 
--	(AM-TMP*
 -	*
--	*AM-TMP)
+-	*
+-	*
 -	*
 -	(A0*A0)
 preferir	(V*V)
@@ -1910,8 +1910,8 @@ ter	(V*V)
 -	*
 -	*
 -	*
--	*A1)
 -	*
+-	*A1)
 -	*
 
 -	*
@@ -2032,7 +2032,8 @@ simpatizar	(V*V)
 -	(A0*
 -	*A0)
 ganhar	(V*V)
--	(A1*
+-	(A2*A2)
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -2042,12 +2043,11 @@ ganhar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*A1)
+-	*AM-CAU)
 -	*
 
--	(A1*
--	*A1)
+-	(A0*
+-	*A0)
 narrar	(V*V)
 -	(A1*
 -	*
@@ -2070,7 +2070,7 @@ haver	(V*V)
 -	*
 -	*A1)
 -	*
--	(AM-DIS*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2081,7 +2081,7 @@ haver	(V*V)
 -	*
 -	*
 -	*
--	*AM-DIS)
+-	*A1)
 -	*
 
 -	*
@@ -2111,12 +2111,12 @@ ocorrer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-TMP*
+-	*
+-	*
+-	*
+-	*AM-TMP)
 -	*
 
 -	*
@@ -2128,23 +2128,23 @@ ocorrer	(V*V)
 colocar	(V*V)
 -	(A2*
 -	*A2)
+-	(AM-TMP*
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-TMP)
 -	*
 
 -	*
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*A1)
+-	(AM-ADV*AM-ADV)
 chegar	(V*V)
 -	(AM-LOC*
 -	*
@@ -2165,8 +2165,7 @@ chegar	(V*V)
 -	*
 -	*A0)
 dar	(V*V)
--	(A1*A1)
--	(AM-CAU*
+-	(A0*
 -	*
 -	*
 -	*
@@ -2192,7 +2191,8 @@ dar	(V*V)
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*
+-	*A0)
 -	*
 
 -	*
@@ -2214,6 +2214,7 @@ dar	(V*V)
 -	*
 -	*
 -	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2231,8 +2232,7 @@ dar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-LOC)
 -	(A1*
 -	*A1)
 -	*
@@ -2273,9 +2273,9 @@ adotar	(V*V)
 dar	(V*V)
 -	(A1*
 -	*A1)
--	(A2*
+-	(AM-TMP*
 -	*
--	*A2)
+-	*AM-TMP)
 -	*
 
 -	*
@@ -2324,11 +2324,7 @@ dizer	(V*V)
 -	*
 -	(A1*A1)
 estar	(V*V)
--	(A2*
--	*
--	*
--	*
--	*A2)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2340,6 +2336,10 @@ estar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*AM-TMP)
 -	*
 -	*
 -	*
@@ -2370,9 +2370,9 @@ estar	(V*V)
 -	(A0*A0)
 -	*
 ir	(V*V)
--	(A2*
+-	(A1*
 -	*
--	*A2)
+-	*A1)
 -	*
 -	*
 -	*
@@ -2427,7 +2427,11 @@ vetar	(V*V)
 -	(AM-TMP*AM-TMP)
 -	(A0*A0)
 estar	(V*V)
--	(A2*
+-	(AM-LOC*
+-	*
+-	*AM-LOC)
+-	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2441,20 +2445,16 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*A2)
+-	*A1)
 -	*
 
 -	(AM-TMP*
 -	*
 -	*AM-TMP)
 -	*
--	(A1*
+-	(A0*
 -	*
--	*A1)
+-	*A0)
 -	*
 -	*
 -	*
@@ -2535,8 +2535,8 @@ valer	(V*V)
 -	*
 -	(A1*
 -	*A1)
-crescer	(A3*
--	*
+crescer	(V*V)
+-	(A3*
 -	*
 -	*
 -	*
@@ -2573,15 +2573,15 @@ elevar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*AM-TMP)
 -	*
 
 -	(A0*
@@ -2605,23 +2605,23 @@ divulgar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	*
+-	(AM-CAU*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*AM-CAU)
 -	*
 
 -	*
@@ -2733,6 +2733,7 @@ estar	(V*V)
 -	*
 -	*
 
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2740,8 +2741,7 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-TMP)
 -	*
 -	(A1*
 -	*A1)
@@ -2794,15 +2794,15 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*AM-TMP)
 -	*
--	(AM-LOC*
--	*AM-LOC)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2864,12 +2864,12 @@ estimular	(V*V)
 -	*
 -	*A1)
 -	*
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*AM-TMP)
 -	(A0*
 -	*A0)
 ganhar	(V*V)
@@ -2877,10 +2877,10 @@ ganhar	(V*V)
 -	*A1)
 -	*
 
--	(A0*
+-	(A1*
 -	*
 -	*
--	*A0)
+-	*A1)
 trabalhar	(V*V)
 -	(A2*
 -	*
@@ -2933,7 +2933,6 @@ vir	(V*V)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
@@ -2955,7 +2954,8 @@ vir	(V*V)
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*
+-	*
 -	*
 -	*
 compensar	(V*V)
@@ -3069,10 +3069,10 @@ jogar	(V*V)
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
--	*A0)
+-	*
+-	(A0*A0)
 -	(AM-NEG*AM-NEG)
 -	*
 avaliar	(V*V)
@@ -3127,7 +3127,7 @@ proibir	(V*V)
 -	*
 -	*A1)
 estar	(V*V)
--	*
+-	(A1*A1)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
@@ -3149,16 +3149,16 @@ estar	(V*V)
 
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	(A1*
@@ -3199,14 +3199,14 @@ inspirar	(V*V)
 -	*AM-LOC)
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3287,7 +3287,7 @@ afirmar	(V*V)
 -	(A1*A1)
 -	*
 achar	(V*V)
--	*
+-	(A1*A1)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
@@ -3303,18 +3303,18 @@ encontrar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*AM-LOC)
 -	*
 
 -	(A0*
@@ -3374,13 +3374,13 @@ confundir	(V*V)
 -	(A1*A1)
 -	*
 receber	(V*V)
--	(A2*
--	*A2)
--	(AM-TMP*
+-	(A1*
+-	*A1)
+-	(AM-LOC*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*AM-LOC)
 
 -	(A1*
 -	*
@@ -3393,8 +3393,8 @@ receber	(V*V)
 -	*A1)
 -	*
 receber	(V*V)
--	(A2*
--	*A2)
+-	(AM-LOC*
+-	*AM-LOC)
 -	(AM-TMP*AM-TMP)
 -	(AM-LOC*
 -	*
@@ -3443,15 +3443,15 @@ realizar	(V*V)
 -	*AM-CAU)
 -	*
 
--	(A1*A1)
-bater	(A2*
+-	(A0*A0)
+bater	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*A2)
+-	*A1)
 
 -	(A0*A0)
 -	*
@@ -3543,13 +3543,13 @@ ficar	(V*V)
 -	*AM-TMP)
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*A0)
 -	*
 -	*
 -	*
@@ -3621,11 +3621,11 @@ participar	(V*V)
 -	*A1)
 -	*
 
--	(AM-TMP*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*
+-	*
 -	*
 -	(A1*A1)
 estar	(V*V)
@@ -3723,12 +3723,12 @@ resolver	(V*V)
 -	*
 pegar	(V*V)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -3751,15 +3751,15 @@ fazer	(V*V)
 -	*A1)
 -	*
 encaixar	(V*V)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*A2)
+-	*A1)
 -	*
 
--	(AM-NEG*AM-NEG)
+-	*
 ter	(V*V)
 -	(A1*A1)
 -	(A2*
@@ -3771,20 +3771,20 @@ ter	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*A0)
 -	*
 denunciar	(V*V)
 -	(AM-TMP*AM-TMP)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*A2)
 -	*
 
 -	*
@@ -3799,7 +3799,7 @@ mudar	(V*V)
 -	*
 -	*A1)
 -	*
--	*
+-	(AM-TMP*AM-TMP)
 -	*
 -	*
 -	*
@@ -3823,32 +3823,32 @@ mudar	(V*V)
 -	(AM-TMP*AM-TMP)
 -	*
 depender	(V*V)
--	(AM-LOC*
+-	(AM-TMP*AM-TMP)
+-	(A1*
 -	*
--	*
--	*AM-LOC)
+-	*A1)
 -	*
 
 estar	(V*V)
 -	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A2)
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 
 -	*
@@ -3873,10 +3873,13 @@ desestimular	(V*V)
 -	*AM-LOC)
 -	*
 
--	(V*V)
+-	(A0*A0)
 -	*
 oferecer	(V*V)
--	(A1*
+-	(A2*
+-	*A2)
+-	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -3885,17 +3888,25 @@ oferecer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*A1)
+-	*AM-LOC)
 -	*
 
-causar	(V*V)
+causar	(AM-TMP*AM-TMP)
 -	(A1*
 -	*A1)
 -	*
--	(AM-DIS*
+-	(AM-TMP*
+-	*
+-	*AM-TMP)
+-	*
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 -	*
 -	*
@@ -3913,17 +3924,6 @@ causar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*AM-DIS)
 -	*
 
 -	*
@@ -3962,7 +3962,7 @@ tratar	(V*V)
 -	*
 
 chegar	(V*V)
--	(A2*A2)
+-	(A1*A1)
 -	*
 -	*
 -	*
@@ -3987,7 +3987,7 @@ chegar	(V*V)
 -	*
 -	*
 sair	(V*V)
--	(V*V)
+-	(AM-TMP*AM-TMP)
 -	(A1*
 -	*
 -	*A1)
@@ -4086,7 +4086,7 @@ pagar	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
+-	*
 -	*
 -	*
 estar	(V*V)
@@ -4099,26 +4099,26 @@ estar	(V*V)
 pôr	(V*V)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*A2)
 -	*
 
 -	*
@@ -4210,16 +4210,16 @@ estar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A2)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4242,8 +4242,8 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*
 -	(A0*
+-	*
 -	*
 -	*
 -	*
@@ -4256,12 +4256,7 @@ estar	(V*V)
 -	*A0)
 -	(AM-NEG*AM-NEG)
 resistir	(V*V)
--	(A2*
--	*
--	*
--	*
--	*
--	*A2)
+-	(A1*
 -	*
 -	*
 -	*
@@ -4270,6 +4265,11 @@ resistir	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 -	*
 -	*
@@ -4311,14 +4311,14 @@ pagar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A2)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -4350,10 +4350,10 @@ pagar	(V*V)
 -	*
 -	*
 -	*
--	(V*V)
-filmar	(A1*
+-	(A1*A1)
+filmar	(V*V)
 -	*
--	*A1)
+-	*
 -	*
 -	*
 -	*
@@ -4487,6 +4487,7 @@ bastar	(V*V)
 -	*
 -	*AM-LOC)
 -	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4494,8 +4495,7 @@ bastar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 
 -	*
@@ -4547,7 +4547,7 @@ ancorar	(V*V)
 -	*
 -	*
 -	(A0*A0)
--	(V*V)
+-	(AM-REC*AM-REC)
 tornar	(V*V)
 -	(A2*
 -	*
@@ -4574,8 +4574,8 @@ haver	(V*V)
 querer	(V*V)
 -	*
 -	*
--	*
--	*
+-	(AM-TMP*
+-	*AM-TMP)
 -	(AM-LOC*
 -	*
 -	*
@@ -4608,13 +4608,7 @@ dispensar	(V*V)
 -	*
 -	(AM-TMP*AM-TMP)
 -	*
--	*
--	*
--	*
--	*
--	*
--	(AM-PRD*
--	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4633,7 +4627,13 @@ dispensar	(V*V)
 -	*
 -	*
 -	*
--	*AM-PRD)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 
 -	(AM-TMP*AM-TMP)
@@ -4718,8 +4718,8 @@ jogar	(V*V)
 -	*A1)
 -	*
 
--	*
--	(A1*A1)
+-	(A1*
+-	*A1)
 estar	(V*V)
 -	(AM-TMP*
 -	*AM-TMP)
@@ -4749,15 +4749,15 @@ apreciar	(V*V)
 -	*A1)
 -	(AM-NEG*AM-NEG)
 existir	(V*V)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*A2)
--	(AM-TMP*AM-TMP)
+-	*A1)
+-	(AM-TMP*
 -	*
--	*
+-	*AM-TMP)
 -	*
 -	*
 -	*
@@ -4830,33 +4830,33 @@ querer	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(A0*A0)
@@ -5014,8 +5014,8 @@ haver	(V*V)
 -	*
 
 -	*
--	(V*V)
 -	(A1*A1)
+-	(A0*A0)
 enfrentar	(V*V)
 -	(A1*
 -	*
@@ -5073,7 +5073,7 @@ estimular	(V*V)
 -	*
 -	(A0*A0)
 estimular	(V*V)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -5085,7 +5085,7 @@ estimular	(V*V)
 -	*
 -	*
 -	*
--	*A2)
+-	*A1)
 -	*
 
 -	*
