--- a/outputs/1.0/wan50/hs_16x16/ctxp_1/R_IOB/batch/lr_5.00e-03/2018-09-28 155042/valid-eval.props
+++ b/outputs/1.0/wan50/hs_16x16/ctxp_1/R_IOB/batch/lr_5.00e-03/2018-09-28 155042/valid-eval.props
@@ -7,9 +7,9 @@
 desconhecer	(V*V)
 -	*
 -	(AM-LOC*
--	*
 -	*AM-LOC)
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -29,6 +29,7 @@ desconhecer	(V*V)
 -	*A1)
 -	*
 
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -45,13 +46,12 @@ desconhecer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-ADV)
 -	*
 -	(A0*
 -	*A0)
--	(AM-DIS*AM-DIS)
--	*
+-	(AM-NEG*
+-	*AM-NEG)
 apontar	(V*V)
 -	(A1*
 -	*
@@ -72,10 +72,10 @@ sonhar	(V*V)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
--	(V*V)
+-	(A1*
 -	*
 -	*
--	*
+-	*A1)
 -	*
 -	(A1*
 -	*
@@ -93,8 +93,8 @@ sonhar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	(AM-LOC*
+-	*AM-LOC)
 -	(A0*A0)
 chegar	(V*V)
 -	(A2*
@@ -137,17 +137,17 @@ passar	(V*V)
 -	*
 -	(A0*
 -	*A0)
--	(V*V)
+-	(AM-REC*AM-REC)
 realizar	(V*V)
 -	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-MNR)
 -	*
 
 -	*
@@ -156,8 +156,8 @@ realizar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*A0)
 -	*
 -	*
 -	*
@@ -187,28 +187,28 @@ vir	(V*V)
 -	*
 -	*A2)
 -	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*AM-MNR)
 -	*
 
 -	(AM-ADV*AM-ADV)
 haver	(V*V)
 -	(A1*
--	*
--	*
--	*
 -	*A1)
--	(AM-LOC*
--	*AM-LOC)
+-	(A2*
+-	*
+-	*A2)
+-	(A1*
+-	*A1)
 -	*
 
 -	(A0*
@@ -236,8 +236,7 @@ morrer	(V*V)
 -	(A1*A1)
 -	*
 ficar	(V*V)
--	(V*V)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -250,7 +249,8 @@ ficar	(V*V)
 -	*
 -	*
 -	*
--	*A2)
+-	*
+-	*AM-MNR)
 -	*
 
 -	*
@@ -273,9 +273,9 @@ subir	(V*V)
 -	*AM-LOC)
 -	*
 
--	*
--	*
-pedir	*
+-	(A0*
+-	*A0)
+pedir	(V*V)
 -	*
 -	*
 -	*
@@ -312,7 +312,7 @@ pedir	*
 -	*
 -	*
 -	*
-apurar	(A0*A0)
+apurar	(V*V)
 -	(A1*
 -	*
 -	*
@@ -323,14 +323,14 @@ apurar	(A0*A0)
 -	*A1)
 -	*
 
+-	(AM-TMP*
+-	*
+-	*AM-TMP)
+-	*
+-	(A1*
 -	*
 -	*
--	*
--	*
--	(A0*
--	*
--	*
--	*A0)
+-	*A1)
 -	(AM-NEG*AM-NEG)
 -	*
 retirar	(V*V)
@@ -370,9 +370,9 @@ garantir	(V*V)
 -	*
 
 -	*
--	(A1*
--	*A1)
+-	(A0*
 -	*
+-	*A0)
 produzir	(V*V)
 -	(A0*
 -	*
@@ -425,12 +425,12 @@ explicar	(V*V)
 -	(AM-NEG*AM-NEG)
 -	*
 fixar	(V*V)
--	(AM-TMP*
+-	(A3*
+-	*A3)
+-	(A4*
 -	*
 -	*
--	*
--	*
--	*AM-TMP)
+-	*A4)
 -	*
 -	*
 -	*
@@ -509,14 +509,14 @@ reajustar	(V*V)
 -	*
 -	*
 -	*A1)
--	(A3*
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*A3)
+-	*AM-TMP)
 -	*
 
 -	(A1*
@@ -529,8 +529,8 @@ reajustar	(V*V)
 -	*
 -	*
 -	*
--	*
 -	*A1)
+-	*
 -	*
 dizer	(V*V)
 -	*
@@ -552,8 +552,8 @@ beneficiar	(V*V)
 -	*
 -	*
 -	*
--	*AM-ADV)
 -	*
+-	*AM-ADV)
 
 -	*
 -	*
@@ -595,8 +595,8 @@ receber	(V*V)
 -	*A1)
 -	*
 
--	*
 -	(A0*
+-	*
 -	*
 -	*
 -	*A0)
@@ -714,11 +714,11 @@ pensar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -749,15 +749,15 @@ receber	(V*V)
 -	(A0*A0)
 ver	(V*V)
 -	(A1*
--	*
 -	*A1)
+-	(AM-MNR*AM-MNR)
 -	*
 
+-	(AM-DIS*
 -	*
+-	*AM-DIS)
 -	*
--	*
--	*
--	*
+-	(A0*A0)
 -	*
 -	(A1*
 -	*A1)
@@ -799,7 +799,7 @@ ir	(V*V)
 fazer	(V*V)
 -	(A1*
 -	*A1)
--	(A3*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -821,7 +821,7 @@ fazer	(V*V)
 -	*
 -	*
 -	*
--	*A3)
+-	*AM-LOC)
 -	*
 
 -	*
@@ -829,12 +829,12 @@ fazer	(V*V)
 -	(A0*A0)
 atacar	(V*V)
 -	(A1*A1)
--	(AM-TMP*AM-TMP)
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*
+-	*AM-TMP)
 -	*
 -	*
 -	*
@@ -861,12 +861,11 @@ atacar	(V*V)
 -	*
 -	*
 -	(A0*A0)
+-	(AM-TMP*AM-TMP)
 -	(AM-NEG*AM-NEG)
--	*
 ter	(V*V)
 -	(A1*
 -	*
--	*A1)
 -	*
 -	*
 -	*
@@ -879,13 +878,14 @@ ter	(V*V)
 -	*
 -	*
 -	*
--	*
--	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*A1)
+-	(A2*
+-	*
+-	*A2)
 -	*
 
 -	*
@@ -898,12 +898,12 @@ ter	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
+-	*
 -	*
 ficar	(V*V)
--	(V*V)
+-	(V*
+-	*V)
 -	(AM-TMP*
--	*
 -	*
 -	*
 -	*
@@ -963,26 +963,26 @@ ficar	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
-prever	(V*V)
--	(A1*
+-	*
+prever	*
+-	*
+-	(A1*A1)
+-	(A2*
 -	*
 -	*
 -	*
--	*
--	*
--	*A1)
+-	*A2)
 -	*
 
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*A0)
+-	(AM-NEG*AM-NEG)
 -	*
 afetar	(V*V)
 -	(A1*
@@ -1049,18 +1049,18 @@ levantar	(V*V)
 -	*A0)
 -	*
 
--	(AM-PNC*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*AM-PNC)
 -	*
+-	*A1)
 -	*
 confirmar	(V*V)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
--	*AM-LOC)
+-	*AM-TMP)
 -	*
 
 -	(A0*
@@ -1150,14 +1150,14 @@ punir	(V*V)
 -	*
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	(AM-TMP*AM-TMP)
+-	*A0)
+-	(AM-DIS*AM-DIS)
 cumprir	(V*V)
 -	(A1*
 -	*
@@ -1166,8 +1166,8 @@ cumprir	(V*V)
 
 -	(A0*A0)
 tomar	(V*V)
+-	(V*V)
 -	(A1*
--	*
 -	*
 -	*A1)
 
@@ -1198,18 +1198,18 @@ anunciar	(V*V)
 -	(A1*
 -	*A1)
 ficar	(V*V)
--	(A3*
+-	(A4*
 -	*
 -	*
 -	*
 -	*
--	*A3)
--	*
--	(A1*
+-	*A4)
 -	*
 -	*
 -	*
--	*A1)
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -1217,17 +1217,17 @@ ficar	(V*V)
 começar	(V*V)
 -	(AM-TMP*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*AM-TMP)
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*AM-LOC)
 -	*
 
 -	*
@@ -1283,20 +1283,23 @@ dizer	(V*V)
 -	*
 -	*
 faltar	(V*V)
--	(V*V)
--	(A1*
+-	(A1*A1)
+-	(A2*
 -	*
--	*A1)
+-	*A2)
 
--	*
--	*
+-	(A0*
+-	*A0)
 -	*
 -	*
 viver	(V*V)
 -	(A1*
 -	*
 -	*A1)
--	(AM-TMP*
+-	(A4*
+-	*
+-	*
+-	*A4)
 -	*
 -	*
 -	*
@@ -1312,9 +1315,6 @@ viver	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*AM-TMP)
 -	*
 
 -	(A0*
@@ -1353,6 +1353,7 @@ dizer	(V*V)
 -	*A1)
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
@@ -1372,8 +1373,7 @@ dizer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*A0)
 -	*
 -	*
 -	*
@@ -1430,8 +1430,8 @@ renovar	(V*V)
 -	*
 
 -	*
--	*
 -	(A1*A1)
+-	(A0*A0)
 acontecer	(V*V)
 -	*
 -	*
@@ -1501,7 +1501,6 @@ começar	(V*V)
 -	(AM-TMP*
 -	*AM-TMP)
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1509,7 +1508,8 @@ começar	(V*V)
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*
+-	*
 -	*
 
 -	(AM-TMP*
@@ -1519,9 +1519,9 @@ começar	(V*V)
 ganhar	(V*V)
 -	(A1*
 -	*
--	*
--	*
 -	*A1)
+-	*
+-	*
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
@@ -1557,9 +1557,9 @@ disputar	(V*V)
 -	*A1)
 -	*
 -	*
+-	(AM-LOC*
 -	*
--	*
--	*
+-	*AM-LOC)
 -	*
 
 -	*
@@ -1582,9 +1582,9 @@ disputar	(V*V)
 -	*
 -	*
 terminar	(V*V)
--	(A1*
+-	(AM-TMP*
 -	*
--	*A1)
+-	*AM-TMP)
 -	*
 
 -	(A0*A0)
@@ -1593,9 +1593,9 @@ multar	(V*V)
 -	*A1)
 -	(AM-LOC*
 -	*AM-LOC)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
--	*AM-LOC)
+-	*AM-TMP)
 
 -	(A0*
 -	*
@@ -1620,17 +1620,17 @@ apresentar	(V*V)
 -	(A1*
 -	*
 -	*
--	*A1)
--	(AM-LOC*
 -	*
--	*AM-LOC)
+-	*
+-	*
+-	*A1)
 -	*
 
 -	*
 -	*
 -	*
--	(A0*
--	*A0)
+-	(A0*A0)
+-	(A0*A0)
 descumprir	(V*V)
 -	(A1*
 -	*A1)
@@ -1675,23 +1675,23 @@ aplicar	(V*V)
 -	*
 -	*
 -	*A1)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*AM-TMP)
 -	*
 
 -	(A0*A0)
 produzir	(V*V)
--	(V*V)
+-	(A1*A1)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
 
--	*
--	*
+-	(A1*
+-	*A1)
 -	*
 instalar	(V*V)
 -	(A1*
@@ -1760,8 +1760,8 @@ fazer	(V*V)
 -	(A0*A0)
 aconselhar	(V*V)
 -	(A1*
--	*
--	*
+-	*A1)
+-	(A1*
 -	*
 -	*
 -	*
@@ -1855,14 +1855,14 @@ fazer	(V*V)
 -	*
 -	*
 -	*
--	*A1)
 -	*
--	(AM-DIS*AM-DIS)
+-	*
+-	*A1)
 -	*
 criticar	(V*V)
 -	*
 
--	*
+-	(AM-TMP*AM-TMP)
 -	*
 -	(A0*
 -	*A0)
@@ -1886,8 +1886,8 @@ cumprir	(V*V)
 -	*
 -	(A0*A0)
 preferir	(V*V)
--	(V*V)
 -	(A1*
+-	*
 -	*A1)
 -	*
 
@@ -1895,7 +1895,7 @@ preferir	(V*V)
 -	*
 -	*
 -	*
--	*
+-	(A0*A0)
 -	*
 manter	(V*V)
 -	(A1*
@@ -2032,18 +2032,18 @@ simpatizar	(V*V)
 -	(A0*
 -	*A0)
 ganhar	(V*V)
--	(A2*A2)
--	(AM-CAU*
+-	(AM-EXT*AM-EXT)
+-	(A1*
+-	*A1)
+-	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*AM-CAU)
+-	*AM-MNR)
 -	*
 
 -	(A0*
@@ -2070,7 +2070,7 @@ haver	(V*V)
 -	*
 -	*A1)
 -	*
--	(AM-DIS*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2081,7 +2081,7 @@ haver	(V*V)
 -	*
 -	*
 -	*
--	*AM-DIS)
+-	*A1)
 -	*
 
 -	*
@@ -2105,18 +2105,18 @@ separar	(V*V)
 
 -	*
 -	(A1*A1)
-ocorrer	(V*V)
+ocorrer	(AM-ADV*AM-ADV)
 -	*
--	(AM-TMP*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*
+-	*
+-	*A1)
 -	*
 
 -	*
@@ -2139,11 +2139,11 @@ colocar	(V*V)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 chegar	(V*V)
 -	(AM-LOC*
@@ -2195,6 +2195,7 @@ dar	(V*V)
 -	*A0)
 -	*
 
+-	(AM-DIS*
 -	*
 -	*
 -	*
@@ -2231,8 +2232,7 @@ dar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-DIS)
 -	(A1*
 -	*A1)
 -	*
@@ -2273,9 +2273,9 @@ adotar	(V*V)
 dar	(V*V)
 -	(A1*
 -	*A1)
--	(A2*
+-	(AM-TMP*
 -	*
--	*A2)
+-	*AM-TMP)
 -	*
 
 -	*
@@ -2284,13 +2284,13 @@ forçar	(V*V)
 -	*
 -	(AM-TMP*AM-TMP)
 -	*
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*AM-LOC)
 -	*
 
 -	*
@@ -2302,10 +2302,10 @@ forçar	(V*V)
 -	*
 reduzir	(V*V)
 -	(A1*
--	*A1)
--	(AM-LOC*
 -	*
--	*AM-LOC)
+-	*
+-	*
+-	*A1)
 -	*
 
 -	(A1*
@@ -2320,8 +2320,8 @@ dizer	(V*V)
 -	*A0)
 -	*
 
--	*
--	*
+-	(A2*
+-	*A2)
 -	(A1*A1)
 estar	(V*V)
 -	(A2*
@@ -2386,6 +2386,9 @@ ir	(V*V)
 -	*
 -	*
 
+-	(A0*
+-	*
+-	*A0)
 -	*
 -	*
 -	*
@@ -2397,15 +2400,12 @@ ir	(V*V)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
+-	*A0)
 -	*
 -	*
 -	(A0*
@@ -2427,7 +2427,11 @@ vetar	(V*V)
 -	*
 -	(A1*A1)
 estar	(V*V)
--	(A2*
+-	(AM-LOC*
+-	*
+-	*AM-LOC)
+-	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2436,25 +2440,21 @@ estar	(V*V)
 -	*
 -	*
 -	*
+-	*AM-MNR)
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*A2)
 -	*
 
 -	(AM-TMP*
 -	*
 -	*AM-TMP)
 -	*
+-	(A0*
 -	*
--	*
--	*
+-	*A0)
 -	*
 -	*
 -	*
@@ -2519,7 +2519,7 @@ firmar	(V*V)
 -	*
 -	*
 -	*
--	(A1*A1)
+-	(A0*A0)
 valer	(V*V)
 -	(AM-LOC*
 -	*
@@ -2533,8 +2533,8 @@ valer	(V*V)
 -	*
 -	*AM-LOC)
 -	*
--	(A1*
--	*A1)
+-	(A0*
+-	*A0)
 crescer	(V*V)
 -	(A3*
 -	*
@@ -2579,9 +2579,9 @@ elevar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*A1)
--	(AM-LOC*
--	*AM-LOC)
 -	*
 
 -	(A0*
@@ -2607,7 +2607,7 @@ divulgar	(V*V)
 -	*
 -	*A1)
 -	*
--	(AM-CAU*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2621,7 +2621,7 @@ divulgar	(V*V)
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*A1)
 -	*
 
 -	*
@@ -2733,6 +2733,7 @@ estar	(V*V)
 -	*
 -	*
 
+-	(A1*
 -	*
 -	*
 -	*
@@ -2740,8 +2741,7 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 -	(A1*
 -	*A1)
@@ -2762,6 +2762,7 @@ escolher	(V*V)
 -	*AM-TMP)
 -	*
 
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -2769,8 +2770,7 @@ escolher	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-ADV)
 -	*
 -	(A1*
 -	*A1)
@@ -2859,18 +2859,18 @@ estimular	(V*V)
 -	*A1)
 -	*
 
--	(A1*
--	*
--	*
--	*A1)
--	*
--	(AM-LOC*
--	*
--	*
--	*
--	*
--	*AM-LOC)
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A0)
 ganhar	(V*V)
 -	(A1*
@@ -2890,11 +2890,11 @@ trabalhar	(V*V)
 -	*A2)
 -	*
 
+-	(AM-DIS*
+-	*
+-	*
+-	*AM-DIS)
 -	(A1*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2903,7 +2903,7 @@ trabalhar	(V*V)
 -	*
 -	*A1)
 vir	(V*V)
--	(V*V)
+-	(A2*A2)
 -	(AM-TMP*
 -	*
 -	*
@@ -2933,6 +2933,14 @@ vir	(V*V)
 -	*
 -	*
 -	*
+-	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A0)
 -	*
 -	*
 -	*
@@ -2943,19 +2951,11 @@ vir	(V*V)
 -	*
 -	*
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*AM-TMP)
 -	*
 -	*
 compensar	(V*V)
@@ -3034,7 +3034,7 @@ substituir	(V*V)
 -	*
 -	*
 ter	(V*V)
--	(V*V)
+-	(AM-EXT*AM-EXT)
 -	(A1*
 -	*
 -	*
@@ -3061,11 +3061,11 @@ ter	(V*V)
 -	*
 -	*
 jogar	(V*V)
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*AM-MNR)
 -	*
 -	*
 
@@ -3127,7 +3127,7 @@ proibir	(V*V)
 -	*
 -	*A1)
 estar	(V*V)
--	*
+-	(A2*A2)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
@@ -3136,7 +3136,6 @@ estar	(V*V)
 -	*
 -	*AM-TMP)
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
@@ -3144,9 +3143,11 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*
+-	*
 -	*
 
+-	(A1*
 -	*
 -	*
 -	*
@@ -3157,8 +3158,7 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 -	*
 -	(A1*
@@ -3167,17 +3167,17 @@ estar	(V*V)
 -	*
 iniciar	(V*V)
 -	(A2*
--	*
 -	*A2)
+-	(AM-TMP*AM-TMP)
 -	*
 
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 -	(A1*
 -	*
@@ -3199,7 +3199,12 @@ inspirar	(V*V)
 -	*AM-LOC)
 -	*
 
--	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -3208,12 +3213,7 @@ inspirar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*A1)
--	*
+-	*A0)
 ver	(V*V)
 -	(A1*
 -	*
@@ -3268,7 +3268,7 @@ dizer	(V*V)
 -	(A0*A0)
 afirmar	(V*V)
 -	*
--	(AM-TMP*AM-TMP)
+-	(AM-DIS*AM-DIS)
 -	*
 -	(A1*
 -	*
@@ -3371,11 +3371,11 @@ confundir	(V*V)
 -	*A2)
 -	*
 
--	(A0*A0)
+-	(A1*A1)
 -	*
 receber	(V*V)
--	(A1*
--	*A1)
+-	(AM-TMP*
+-	*AM-TMP)
 -	(AM-LOC*
 -	*
 -	*
@@ -3393,29 +3393,29 @@ receber	(V*V)
 -	*A1)
 -	*
 receber	(V*V)
--	(A2*
--	*A2)
+-	(AM-MNR*
+-	*AM-MNR)
 -	(AM-TMP*AM-TMP)
 -	(AM-LOC*
 -	*
 -	*AM-LOC)
 -	(AM-LOC*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*AM-LOC)
 -	*
--	(AM-PRD*
--	*
--	*
--	*
--	*
--	*
--	*
--	*AM-PRD)
--	*
 
--	(AM-TMP*
+-	(AM-LOC*
 -	*
--	*AM-TMP)
+-	*AM-LOC)
 -	*
 morrer	(V*V)
 -	(A1*
@@ -3427,7 +3427,7 @@ morrer	(V*V)
 -	*A1)
 -	*
 realizar	(V*V)
--	(AM-CAU*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3440,28 +3440,28 @@ realizar	(V*V)
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*AM-MNR)
 -	*
 
 -	(A0*A0)
-bater	(V*V)
--	(A2*
+bater	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*A2)
+-	*
+-	*A1)
 
--	(A0*A0)
+-	(A1*
 -	*
--	*
+-	*A1)
 -	*
 ficar	(V*V)
--	(A2*
--	*
--	*
--	*A2)
+-	(A1*
+-	*A1)
+-	(AM-LOC*
+-	*AM-LOC)
 
 -	*
 -	*
@@ -3621,11 +3621,11 @@ participar	(V*V)
 -	*A1)
 -	*
 
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*A1)
 -	*
 -	(A1*A1)
 estar	(V*V)
@@ -3664,8 +3664,8 @@ afirmar	(V*V)
 -	*A0)
 -	*
 
--	*
--	*
+-	(AM-DIS*
+-	*AM-DIS)
 -	*
 -	(A0*
 -	*A0)
@@ -3742,9 +3742,9 @@ pegar	(V*V)
 -	*
 -	*
 fazer	(V*V)
--	(A1*
+-	(AM-LOC*
 -	*
--	*A1)
+-	*AM-LOC)
 -	*
 
 -	(A1*
@@ -3766,16 +3766,16 @@ ter	(V*V)
 -	*A2)
 -	*
 
--	(A0*
--	*A0)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	*A1)
 -	*
 denunciar	(V*V)
--	(V*V)
+-	(AM-TMP*AM-TMP)
 -	(A1*
 -	*
 -	*A1)
@@ -3818,10 +3818,10 @@ mudar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*A0)
--	*
--	(AM-TMP*AM-TMP)
--	*
 depender	(V*V)
 -	(AM-LOC*
 -	*
@@ -3830,9 +3830,9 @@ depender	(V*V)
 -	*
 
 estar	(V*V)
+-	(A1*
+-	*A1)
 -	(A2*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3879,7 +3879,7 @@ oferecer	(V*V)
 -	(A2*
 -	*A2)
 -	*
--	(AM-LOC*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3888,14 +3888,25 @@ oferecer	(V*V)
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*AM-MNR)
 -	*
 
-causar	(V*V)
+causar	(AM-TMP*AM-TMP)
 -	(A1*
 -	*A1)
 -	*
--	(AM-DIS*
+-	(AM-TMP*
+-	*
+-	*AM-TMP)
+-	*
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 -	*
 -	*
@@ -3913,17 +3924,6 @@ causar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*AM-DIS)
 -	*
 
 -	*
@@ -3961,8 +3961,8 @@ tratar	(V*V)
 -	*A1)
 -	*
 
-chegar	(V*V)
--	(A2*A2)
+chegar	(AM-TMP*
+-	*AM-TMP)
 -	*
 -	*
 -	*
@@ -3993,6 +3993,18 @@ sair	(V*V)
 -	*A1)
 -	*
 
+-	(AM-TMP*
+-	*AM-TMP)
+-	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A0)
+fazer	(V*V)
 -	(A0*
 -	*
 -	*
@@ -4003,28 +4015,16 @@ sair	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A0)
-fazer	(V*V)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*A1)
 -	*
 
 -	*
@@ -4097,28 +4097,28 @@ estar	(V*V)
 
 -	(A0*A0)
 pôr	(V*V)
+-	(V*V)
+-	(A2*
+-	*A2)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*A2)
 -	*
 
 -	*
@@ -4237,6 +4237,7 @@ estar	(V*V)
 -	*
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
@@ -4252,16 +4253,10 @@ estar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*A0)
 -	(AM-NEG*AM-NEG)
 resistir	(V*V)
--	(A2*
--	*
--	*
--	*
--	*
--	*A2)
+-	(A1*
 -	*
 -	*
 -	*
@@ -4270,6 +4265,11 @@ resistir	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*A1)
 -	*
 -	*
 -	*
@@ -4311,14 +4311,14 @@ pagar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A2)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4350,7 +4350,7 @@ pagar	(V*V)
 -	*
 -	*
 -	*
--	*
+-	(A0*A0)
 filmar	(V*V)
 -	*
 -	*
@@ -4375,7 +4375,7 @@ fazer	(V*V)
 -	(A1*
 -	*
 -	*A1)
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -4383,7 +4383,7 @@ fazer	(V*V)
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*AM-MNR)
 -	*
 -	*
 -	*
@@ -4395,6 +4395,7 @@ fazer	(V*V)
 -	*
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
@@ -4415,8 +4416,7 @@ fazer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*A0)
 confirmar	(V*V)
 -	*
 -	(A1*
@@ -4429,14 +4429,14 @@ confirmar	(V*V)
 
 ver	(V*V)
 -	*
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*AM-LOC)
 -	*
 -	(A1*
 -	*
@@ -4460,15 +4460,15 @@ ver	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*A0)
 jogar	(V*V)
 -	(A1*A1)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
--	*A2)
+-	*AM-MNR)
 -	*
 
 vencer	(V*V)
@@ -4481,11 +4481,11 @@ vencer	(V*V)
 -	(AM-ADV*AM-ADV)
 bastar	(V*V)
 -	*
--	(AM-LOC*
+-	(A1*
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*A1)
 -	*
 -	(A1*
 -	*
@@ -4513,17 +4513,15 @@ bastar	(V*V)
 -	(AM-NEG*AM-NEG)
 -	*
 chegar	(V*V)
--	(A1*
+-	(A2*
 -	*
--	*A1)
+-	*A2)
 -	*
 
 -	(A0*
 -	*A0)
 ancorar	(V*V)
--	(A0*
--	*
--	*A0)
+-	(A1*
 -	*
 -	*
 -	*
@@ -4535,6 +4533,8 @@ ancorar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*A1)
 -	*
 
 -	*
@@ -4547,10 +4547,10 @@ ancorar	(V*V)
 -	*
 -	*
 -	(A0*A0)
--	(AM-REC*AM-REC)
+-	(A1*A1)
 tornar	(V*V)
+-	(V*V)
 -	(A2*
--	*
 -	*
 -	*
 -	*A2)
@@ -4570,12 +4570,12 @@ haver	(V*V)
 -	*A1)
 -	*
 
--	(A1*A1)
+-	(A0*A0)
 querer	(V*V)
 -	*
 -	*
--	*
--	*
+-	(AM-LOC*
+-	*AM-LOC)
 -	(AM-LOC*
 -	*
 -	*
@@ -4598,15 +4598,15 @@ ir	(V*V)
 -	*AM-LOC)
 -	*
 
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
 -	*
 -	*A0)
 dispensar	(V*V)
 -	*
--	(AM-TMP*AM-TMP)
+-	*
 -	*
 -	(A1*
 -	*
@@ -4685,11 +4685,11 @@ chegar	(V*V)
 -	(AM-TMP*
 -	*AM-TMP)
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*
+-	*
 -	*
 -	*
 
@@ -4718,8 +4718,8 @@ jogar	(V*V)
 -	*A1)
 -	*
 
--	*
--	*
+-	(A1*
+-	*A1)
 estar	(V*V)
 -	(AM-TMP*
 -	*AM-TMP)
@@ -4733,7 +4733,7 @@ estar	(V*V)
 -	*
 -	(A0*A0)
 apreciar	(V*V)
--	(A1*A1)
+-	(A1*
 -	*
 -	*
 -	*
@@ -4742,22 +4742,22 @@ apreciar	(V*V)
 -	*
 -	*
 -	*
--	*
+-	*A1)
 -	*
 
--	(A1*
--	*A1)
+-	(A0*
+-	*A0)
 -	(AM-NEG*AM-NEG)
 existir	(V*V)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*A2)
--	(AM-TMP*AM-TMP)
+-	*A1)
+-	(AM-TMP*
 -	*
--	*
+-	*AM-TMP)
 -	*
 -	*
 -	*
@@ -4768,12 +4768,12 @@ existir	(V*V)
 -	*
 -	*
 
--	*
--	*
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4826,37 +4826,37 @@ querer	(V*V)
 -	(A1*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*A2)
 -	*
 
 -	(A0*A0)
@@ -4906,7 +4906,7 @@ ter	(V*V)
 -	*
 -	(A0*A0)
 ter	(V*V)
--	(A2*A2)
+-	(V*V)
 -	*
 -	*
 -	*
@@ -4933,15 +4933,15 @@ pensar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -5014,8 +5014,8 @@ haver	(V*V)
 -	*
 
 -	*
--	(A1*A1)
 -	(A0*A0)
+-	(A1*A1)
 enfrentar	(V*V)
 -	(A1*
 -	*
@@ -5024,9 +5024,9 @@ enfrentar	(V*V)
 -	*A1)
 -	*
 
--	*
--	*
 -	(A0*
+-	*
+-	*
 -	*A0)
 achar	(V*V)
 -	(A1*
@@ -5046,13 +5046,13 @@ achar	(V*V)
 
 -	(A1*A1)
 estar	(V*V)
--	(A2*
+-	(A2*A2)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
--	*A2)
+-	*A1)
 -	*
 
 -	*
@@ -5073,7 +5073,7 @@ estimular	(V*V)
 -	*
 -	(A0*A0)
 estimular	(V*V)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -5085,7 +5085,7 @@ estimular	(V*V)
 -	*
 -	*
 -	*
--	*A2)
+-	*A1)
 -	*
 
 -	*
@@ -5103,7 +5103,7 @@ estimular	(V*V)
 -	*
 -	*
 -	*
-promover	(A0*A0)
+promover	(V*V)
 -	(V*V)
 -	(A1*
 -	*
@@ -5113,9 +5113,9 @@ promover	(A0*A0)
 -	(A0*
 -	*A0)
 eliminar	(V*V)
--	(A1*
--	*
--	*A1)
+-	(A1*A1)
+-	(A2*
+-	*A2)
 
 -	(A0*A0)
 causar	(V*V)
